--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,14 +10,18 @@
     "consistent-this": [2, "_that"],
     "consistent-return": 0,
     "curly": 0,
+    "keyword-spacing": ["error", {"before": true, "after": true}],
     "no-lonely-if": 2,
     "no-nested-ternary": 2,
     "no-use-before-define": [2, "nofunc"],
     "quotes": [2, "single"],
     "space-before-function-paren": [2, "never"],
-    "space-after-keywords": [2, "always"],
     "space-before-blocks": [2, "always"],
     "space-in-parens": [2, "never"],
     "space-unary-ops": 2
+  },
+  "parser": "@babel/eslint-parser",
+  "parserOptions": {
+    "requireConfigFile": false
   }
 }
